--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@apollo/server": "^4.10.4",
     "apollo-server-errors": "^3.3.1",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
