--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,12 +1,34 @@
 {
-  "compilerOptions": {
-	"target": "es6",
-	"module": "commonjs",
-	"strict": true,
-	"esModuleInterop": true,
-	"skipLibCheck": true,
-	"forceConsistentCasingInFileNames": true,
-	"jsx": "react-jsx"
-  },
-  "include": ["src"]
-}
+	"compilerOptions": {
+	  "target": "ES2020",
+	  "useDefineForClassFields": true,
+	  "lib": [
+		"ES2020",
+		"DOM",
+		"DOM.Iterable"
+	  ],
+	  "module": "ESNext",
+	  "skipLibCheck": true,
+	  /* Bundler mode */
+	  "moduleResolution": "bundler",
+	  "allowImportingTsExtensions": true,
+	  "resolveJsonModule": true,
+	  "isolatedModules": true,
+	  "noEmit": true,
+	  "jsx": "react-jsx",
+	  /* Linting */
+	  "strict": true,
+	  "noUnusedLocals": true,
+	  "noUnusedParameters": true,
+	  "noFallthroughCasesInSwitch": true
+	},
+	"include": [
+	  "src"
+	],
+	"references": [
+	  {
+		"path": "./tsconfig.node.json"
+	  }
+	]
+  }
+  
